# OpenWearableProject1

./: .env.example  .gitignore  01_preprocessing.py  03_rule_engine.py  DATA_README.txt  HOW_TO_RUN.txt  LLM.py  README.md  api.py  app.py  build_profiles.py  build_prompt.py  clean_daily.py  combined_daily.TITLE.txt  combined_daily.csv  combined_daily_clean.csv  eda.py  explain.py  fairness_audit.py  faithfulness.py  features.py  import_fitbit.py  pipeline.py  preprocess.py  profiles_7day.TITLE.txt  profiles_7day.csv  profiles_7day_with_rules.csv  pyproject.toml  requirements-vercel.txt  requirements.txt  rule_engine.py  run_rule_engine.py  shap_summary.csv  suggest.py  train_model.py  train_models.py  vercel.json
data/lifesnaps/rais_anonymized/mongo_rais_anonymized/: surveys.bson
data/processed/: combined_daily.csv  fairness_report.json  profiles_7day.csv  user_demographics.csv
frontend/: .env.example  .env.production  package-lock.json  package.json  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.test.js  api.js  format.js  index.css
frontend/src/components/: AskPanel.js  AuditPage.js  Charts.js  DiceSuggestions.js  Header.js  LandingHero.js  MonitoringPage.js  QuickOverview.js  ScoreSection.js  TrendsSection.js  WhatIfPanel.js
models/: isolation_forest.pkl  xgboost_recovery.json
vercel/: environment.example  pyproject.toml  sync.cmd  vercel.json
