[project]
name = "open-wearable-project1"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "dice-ml>=0.11",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "pydantic>=2.5.0",
]

[tool.vercel]
entrypoint = "api:app"
